# taed2-sentiment_analysis

./: .gitignore  Makefile  README.md  data.dvc  pyproject.toml  requirements.txt
.dvc/: config
data/processed/: audio_emotion_simple.json  audio_metadata.csv  audio_metadata_complete.json
data/raw/: Audio_Speech_Actors.zip.dvc
docs/: dataset_card.md  mkdocs.yml  model_card.md
docs/docs/: index.md
gx/: great_expectations.yml
gx/checkpoints/: audio_metadata_checkpoint.json
gx/expectations/: .ge_store_backend_id  audio_metadata_validation.json
gx/validation_definitions/: audio_metadata_validator.json
models/: cnn_audio_emotion.pth
reports/: api_emissions.csv  emissions.csv  pylint_report.txt
sentiment_analysis/: __init__.py  dataset.py  decode_audio_emotions.py  features.py  plots.py  prepare_dataset.py
sentiment_analysis/data/processed/: audio_emotion_simple.json  audio_metadata_complete.json
sentiment_analysis/modeling/: predict.py  train.py
sentiment_analysis/sentiment_env/: pyvenv.cfg
src/: decode_audio_emotions.py  train.py
src/api/: api.py  schemas.py
src/sentiment_analysis/: train.py
src/streamlit/: app2.py
tests/: gx_audio_metadata_validation.py  test_api_endpoints.py  test_decode_audio_emotions.py  test_model.py  test_prepare_dataset.py  test_train.py
