[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sentiment_analysis"
version = "0.0.1"
description = "This project is going to train a CNN to recognise the emotion of the speaker saying a sentence in an audio."
authors = [
  { name = "Taed2-G11-Sentiment_Analysis" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "codecarbon>=3.0.5",
    "dvc>=3.63.0",
    "fastapi>=0.119.0",
    "ffmpeg>=1.4",
    "great-expectations>=1.1.0",
    "librosa>=0.11.0",
    "loguru",
    "mkdocs",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pip",
    "pyarrow>=21.0.0",
    "pytest>=8.4.2",
    "python-dotenv",
    "python-multipart>=0.0.20",
    "ruff",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "tqdm",
    "transformers>=4.57.1",
    "typer",
    "uvicorn>=0.37.0",
]
requires-python = ">=3.11,<3.13"


[tool.ruff]
line-length = 99
src = ["sentiment_analysis"]
include = ["pyproject.toml", "sentiment_analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["sentiment_analysis"]
force-sort-within-sections = true

[tool.uv.workspace]
members = [
    ".",
]
[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"

[tool.uv.sources]
sentiment-analysis = { workspace = true }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "click==8.3.0",
    "ghp-import==2.1.0",
    "jinja2==3.1.6",
    "loguru==0.7.3",
    "markdown==3.9",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mergedeep==1.3.4",
    "mkdocs==1.6.1",
    "mkdocs-get-deps==0.2.0",
    "numpy==2.3.3",
    "packaging==25.0",
    "pandas==2.3.3",
    "pathspec==0.12.1",
    "platformdirs==4.4.0",
    "pygments==2.19.2",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyyaml-env-tag==1.1",
    "rich==14.1.0",
    "ruff==0.13.2",
    "sentiment-analysis",
    "shellingham==1.5.4",
    "six==1.17.0",
    "tqdm==4.67.1",
    "typer==0.19.2",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "watchdog==6.0.0",
]

